package com.example.mnist_project.models;

public enum ModelType {
    
    VANILLA_KNN,
    NEURAL_NETWORK,
    NAIVE_BAYESIAN,
    BAYESIAN_BAGGING,
    KNN_AND_DISTANCE_TRANSFORM;

}
